# data-connectors-poc

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  testing.md
.dlt/: secrets.example.toml
pipelines/: milvus.py  postgres_to_milvus.py
sql/: init.sql
tests/: test_milvus_data.py
